--- a/Hosting.html
+++ b/Hosting.html
@@ -23,7 +23,7 @@
       <section id="photo">
         <h2>Photo Mahasiswa</h2>
         <img
-          src="c:\Users\rafia\OneDrive\Pictures\Saved Pictures\WhatsApp Image 2024-10-03 at 15.49.38_bb712b31.jpg"
+          src="foto.jpg"
           alt="Foto Mahasiswa"
           style="width: 300px"
         />
