--- a/Hosting.html
+++ b/Hosting.html
@@ -23,7 +23,7 @@
       <section id="photo">
         <h2>Photo Mahasiswa</h2>
         <img
-          src="foto.jpg"
+          src="c:\Users\rafia\OneDrive\Pictures\Saved Pictures\WhatsApp Image 2024-10-03 at 15.49.38_bb712b31.jpg"
           alt="Foto Mahasiswa"
           style="width: 300px"
         />
@@ -46,6 +46,11 @@
               alt="Gambar Switch"
               style="width: 300px"
             />
+            <li>
+              <strong>Perangkat Perantara:</strong>karena berfungsi
+              menghubungkan dan mengatur komunikasi antar perangkat akhir dalam
+              jaringan.
+            </li>
             <li>
               <strong>Pengertian:</strong>Switch adalah komponen jaringan yang
               berfungsi untuk menghubungkan beberapa perangkat komputer dalam
@@ -85,10 +90,12 @@
       <section id="lampiran">
         <h2>Lampiran File Tutorial</h2>
         <p>
-          File langkah-langkah membuat web hosting dapat diunduh melalui tautan
+          File langkah-langkah membuat web hosting dapat dilihat melalui tautan
           di bawah ini:
         </p>
-        <a href="tutorial.pdf" download="tutorial">Download Tutorial (PDF)</a>
+        <a href="Rafi_Abi_Assyarif_607012400069_TugasBesar.pdf" download
+          >Download Tutorial (PDF)</a
+        >
       </section>
     </main>
     <footer>
