--- a/Hosting.html
+++ b/Hosting.html
@@ -23,7 +23,7 @@
       <section id="photo">
         <h2>Photo Mahasiswa</h2>
         <img
-          src="c:\Users\rafia\OneDrive\Pictures\Saved Pictures\WhatsApp Image 2024-10-03 at 15.49.38_bb712b31.jpg"
+          src="foto.jpg"
           alt="Foto Mahasiswa"
           style="width: 300px"
         />
@@ -90,10 +90,10 @@
       <section id="lampiran">
         <h2>Lampiran File Tutorial</h2>
         <p>
-          File langkah-langkah membuat web hosting dapat dilihat melalui tautan
+          File langkah-langkah membuat web hosting dapat download melalui tautan
           di bawah ini:
         </p>
-        <a href="Rafi_Abi_Assyarif_607012400069_TugasBesar.pdf" download
+        <a href=""  download="Rafi_Abi_Assyarif_607012400069_TugasBesar.pdf"
           >Download Tutorial (PDF)</a
         >
       </section>
