--- a/Hosting.html
+++ b/Hosting.html
@@ -90,11 +90,11 @@
       <section id="lampiran">
         <h2>Lampiran File Tutorial</h2>
         <p>
-          File langkah-langkah membuat web hosting dapat download melalui tautan
+          File langkah-langkah membuat web hosting dapat Dilihat melalui tautan
           di bawah ini:
         </p>
-        <a href=""  download="Rafi_Abi_Assyarif_607012400069_TugasBesar.pdf"
-          >Download Tutorial (PDF)</a
+        <a href="Rafi_Abi_Assyarif_607012400069_TugasBesar.pdf"  download
+          >lihat Tutorial (PDF)</a
         >
       </section>
     </main>
