--- a/Hosting.html
+++ b/Hosting.html
@@ -94,7 +94,10 @@
           di bawah ini:
         </p>
         <a href="607012400069_Rafi_Abi_Assyarif_Hosting web.pdf"  download
-          >lihat Tutorial (PDF)</a
+          >lihat Tutorial Hosting web(PDF)</a
+        >
+         <a href="607012400069_Rafi_Abi_Assyarif_Isi website.pdf"  download
+          >lihat Tutorial Isi web (PDF)</a
         >
       </section>
     </main>
